fix weird headshot stretching problem

--- a/txlege84/static/scss/pages/_legislator.scss
+++ b/txlege84/static/scss/pages/_legislator.scss
@@ -5,9 +5,6 @@
   .headshot {
     @include span-columns(2);
     margin-top: 1.5em;
-    img {
-      width: 100%;
-    }
   }
 
   h2 {
